--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html {
 }
 
 /* VIDEO HERO */
+
 #videoBG {
 	width:100%;
 	height: auto;
@@ -36,19 +37,63 @@ html {
 .video-container {
     position: relative;
     width: 100%;
+	
+  }
+
+  .filter_blur {
+	filter: brightness(60%);
   }
 
   .text-overlay {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 20%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
-	font-family: 'Bebas Neue', sans-serif;
-	font-size: 3rem;
+	font-family: 'Sedgwick Ave Display', cursive;
+	font-size: 7rem;
 	font-weight: 600;
   }
+
+  @media (max-width: 480px) {
+	.text-overlay {
+		position: absolute;
+		top: 50%;
+    	left: 50%;
+		transform: translate(-50%, -50%);
+		font-size: 5rem;
+		font-family: 'Sedgwick Ave Display', cursive;
+		font-weight: 600;
+	}
+  }
+
+  .drip_sole {
+	border: 2px solid rgb(255, 255, 255);
+    background-color: transparent;
+    padding: 5px 15px 5px 15px;
+    text-align: center;
+    min-height: 100%;
+    width: 50%;
+    color:rgb(255, 253, 253);
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 23px;
+    cursor: pointer;
+  }
+
+  .drip_sole:hover {
+	border: 2px solid rgb(255, 255, 255);
+    background-color: transparent;
+    padding: 5px 15px 5px 15px;
+    text-align: center;
+    min-height: 100%;
+    width: 50%;
+    color:rgb(255, 255, 255);
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 23px;
+    cursor: pointer;
+  }
+
 
 
 @media (min-aspect-ratio: 16/9) {
@@ -96,7 +141,7 @@ html {
 }
 
 .nav-link:hover {
-    color:rgb(126, 124, 124)!important;
+    color:rgb(189, 183, 183)!important;
     text-shadow: 0 0 0.1em currentColor;
 }
 
@@ -124,6 +169,12 @@ html {
 .primary_title {
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 3rem;
+	font-weight: 600;
+}
+
+.primary_title1 {
+	font-family: 'Bebas Neue', sans-serif;
+	font-size: 2.5rem;
 	font-weight: 600;
 }
 
