--- a/footware.css
+++ b/footware.css
@@ -148,6 +148,7 @@ html, body {
     position: absolute;
     display: inline-block;
     right: 15%;
+    
 }
 .cart-icon {
     cursor: pointer;
@@ -271,6 +272,35 @@ body {
     flex: 1;
 }
 
+/* NEW NAVBAR DESIGN */
+
+.logo {
+    width: 60px; 
+    height: 50px;
+}
+
+.cart-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    padding-right: 15px; 
+}
+
+.cart-icon {
+    cursor: pointer;
+    margin-right: 10px; 
+}
+
+.cart-notification {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    position: absolute;
+    top: 80;
+    right: 50;
+}
+
 
 .fa-solid1{
     font-size: 1.3rem;
@@ -296,5 +326,4 @@ body {
     color:rgb(126, 124, 124)!important;
     text-shadow: 0 0 0.1em currentColor;
 }
-
 
