--- a/style.css
+++ b/style.css
@@ -51,22 +51,19 @@ html {
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
-	font-family: 'Sedgwick Ave Display', cursive;
-	font-size: 7rem;
-	font-weight: 600;
-  }
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: 7rem;
+    font-weight: 600;
+}
 
-  @media (max-width: 480px) {
-	.text-overlay {
-		position: absolute;
-		top: 50%;
-    	left: 50%;
-		transform: translate(-50%, -50%);
-		font-size: 5rem;
-		font-family: 'Sedgwick Ave Display', cursive;
-		font-weight: 600;
-	}
-  }
+@media (max-width: 480px) {
+    .text-overlay {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 5rem;
+    }
+}
 
   .drip_sole {
 	border: 2px solid rgb(255, 255, 255);
@@ -79,19 +76,26 @@ html {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 23px;
     cursor: pointer;
+	text-decoration: none;
   }
 
+  .no-underline {
+    text-decoration: none;
+}
+
   .drip_sole:hover {
-	border: 2px solid rgb(255, 255, 255);
+	border: 2px solid rgb(5, 5, 5);
     background-color: transparent;
     padding: 5px 15px 5px 15px;
     text-align: center;
     min-height: 100%;
     width: 50%;
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     font-family: 'Bebas Neue', sans-serif;
     font-size: 23px;
     cursor: pointer;
+	text-decoration: none;
+	
   }
 
 
@@ -114,12 +118,13 @@ html {
 
 /* NAVBAR DESIGN*/
 
-.nav-logo{
-	position: absolute;
-    display: inline-block;
-    left: 15.7%;
-	width: 65px;
+
+
+.logo {
+    width: 60px; 
+    height: 50px;
 }
+
 
 
   .navbar-blur{
