--- a/style.css
+++ b/style.css
@@ -188,6 +188,11 @@ html {
 	color:rgb(197, 190, 190);
 }
 
+.primary2 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 19px;
+}
+
 .primary_cross {
 	text-decoration: line-through;
 	font-family: 'Bebas Neue', sans-serif;
@@ -258,7 +263,7 @@ html {
     right: 0;
     background-color: #f4f4f4;
     padding: 10px;
-    width: 500px;
+    width: 400px;
     z-index: 1;
 }
 .cart-item {
