--- a/style.css
+++ b/style.css
@@ -35,8 +35,11 @@ html {
 }
 
 .video-container {
-    position: relative;
-    width: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
 	
   }
 
@@ -47,7 +50,7 @@ html {
   .text-overlay {
     position: absolute;
     top: 50%;
-    left: 20%;
+    left: 30%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
@@ -127,7 +130,7 @@ html {
 
 
 
-  .navbar-blur{
+.navbar-blur{
 	box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
 	background-color: rgba(255, 255, 255, .15);
 	backdrop-filter: blur(5px);
@@ -138,6 +141,10 @@ html {
     text-transform: uppercase;
     font-size: 1.5em;
 	z-index: 3;
+}
+
+.navbar-toggler {
+    margin-right: 50px;
 }
 
 .nav-link {
